--- a/configs/pipeline.yaml
+++ b/configs/pipeline.yaml
@@ -2,8 +2,8 @@
 # ask Matt about adding the views variable to the config file so we can pick the views that we have and in that way instead of iterating over files we will iterate over views - which will determine things
 
 # dataset_name: chickadee-crop
-dataset_name: fly-anipose
-# dataset_name: mirror-mouse-separate
+# dataset_name: fly-anipose
+dataset_name: mirror-mouse-separate
 
 lightning_pose_config: /teamspace/studios/this_studio/lp3d-analysis/configs/config_${dataset_name}.yaml
 
