--- a/configs/config_mirror-mouse-separate.yaml
+++ b/configs/config_mirror-mouse-separate.yaml
@@ -1,12 +1,12 @@
 data:
   # resize dimensions to streamline model creation
   image_resize_dims:
-    height: 128
+    height: 256 # was 128 need 256 for vit 
     width: 256
   # ABSOLUTE path to data directory
-  data_dir: /teamspace/studios/data/mirror-mouse-separate
+  data_dir: /tmp/data/mirror-mouse-separate
   # ABSOLUTE path to unlabeled videos' directory
-  video_dir: /teamspace/studios/data/mirror-mouse-separate/videos
+  video_dir: /tmp/data/mirror-mouse-separate/videos
   # location of labels; for example script, this should be relative to `data_dir`
   csv_file:
     - CollectedData_top.csv
@@ -23,7 +23,7 @@ data:
     - paw1LH
     - paw2LF
     - paw3RF
-    - paw4RH
+    - paw4RH 
     - tailBase
     - tailMid
     - nose
@@ -80,9 +80,10 @@ training:
   rng_seed_data_pt: 0
   # rng seed for weight initialization
   rng_seed_model_pt: 0
-   optimizer: Adam
+  
+  optimizer: Adam
   optimizer_params:
-    learning_rate: 0.001 #(1e-3)
+    learning_rate:  0.00005 #0.00005 #0.00005 #0.001 #(1e-3)
   # learning rate scheduler
   # multisteplr | [todo - reducelronplateau]
   lr_scheduler: multisteplr
@@ -101,11 +102,11 @@ model:
   # resnet50_animalpose_apose | resnet50_animal_ap10k
   # resnet50_human_jhmdb | resnet50_human_res_rle | resnet50_human_top_res
   # efficientnet_b0 | efficientnet_b1 | efficientnet_b2
-  backbone: resnet50_animal_ap10k
+  backbone: vits_dino #resnet50_animal_ap10k #resnet50_animal_ap10k
   # prediction mode - "heatmap" | "regression" | "heatmap_mhcrnn" | "heatmap_multiview" 
-  model_type: heatmap
+  model_type: heatmap_multiview_transformer #heatmap_multiview_transformer
   # head mode - "heatmap_cnn" | "feature_transformer" | "feature_transformer_learnable" | "feature_transformer_learnable_crossview"
-  # head: feature_transformer_learnable_crossview
+  head: heatmap_cnn
   # which heatmap loss to use
   # "mse" | "kl" | "js"
   heatmap_loss_type: mse
