--- a/configs/pipeline_inference.yaml
+++ b/configs/pipeline_inference.yaml
@@ -2,8 +2,10 @@
 # ask Matt about adding the views variable to the config file so we can pick the views that we have and in that way instead of iterating over files we will iterate over views - which will determine things
 
 # dataset_name: chickadee-crop
-dataset_name: fly-anipose
-# dataset_name: mirror-mouse-separate
+# dataset_name: fly-anipose
+dataset_name: mirror-mouse-separate
+# dataset_name: rat7m-crop
+# dataset_name: human36m-crop
 
 lightning_pose_config: /teamspace/studios/this_studio/lp3d-analysis/configs/config_${dataset_name}.yaml
 
@@ -12,7 +14,7 @@ pipeline_seeds: 0
 
 outputs_dir: /teamspace/studios/this_studio/outputs/${dataset_name}
 
-intermediate_results_dir: test_100_multiview
+intermediate_results_dir: test_100_MVT_mirror-mouse-separate_after_merge_debug
 
 # initial training of an ensemble of networks
 train_networks:
@@ -27,7 +29,7 @@ train_networks:
   ensemble_seeds:
     - 0
     - 1
-    - 2
+    # - 2
     # - 3
     # - 4
     # - 5
@@ -42,78 +44,71 @@ train_networks:
     # - context
     # - semisupervised
     # - multiview_cnn
-    # - multiview_transformer_head
-    # - multiview_transformer_learnable
     # - multiview_transformer_learnable_crossview
-    # - multiview_transformer
-    - mvt_3d_loss
-    # - mvt_cross_view_head
+    - multiview_transformer
+    # - mvt_3d_loss
+    # - mvt_semisupervised
+    
     # think about adding multiview here 
   # run inference on videos in these directories (independent of training videos)
   inference_dirs:
-    # - videos_new
+    - videos_new
+    # - videos_fix
+    # - videos_fix_new
     # - videos-for-each-labeled-frame
-    - videos_debug
+    # - videos_debug
     # - videos_ind
+    # - videos 
+    # - videos-for-each-labeled-frame
     # - videos_paper
 
   # training parameters
-  # min_steps: 5000
-  # max_steps: 5000
-  # milestone_steps: [2000, 3000, 4000]
-  # val_check_interval: 50
-  # train_check_interval: 10
-  min_steps: 5000 # need 5000 I use 500 for testing 
-  max_steps: 5000 # need 5000
-  unfreezing_step: 400 # started with 260 for supervised - should be 400 for transformer 
+  min_steps: 500 # need 5000 I use 500 for testing 
+  max_steps: 500 # need 5000
+  unfreezing_step: 400 #400 # started with 260 for supervised - should be 400 for transformer 
   milestone_steps: [2000, 3000, 4000] # in general we have [2000, 3000, 4000]
   val_check_interval: 10 # was 5 
   train_check_interval: 5
 
-# post-processing options
-# post_processing_labels:
+# This is if we want to run concat or use post_process.py
+post_processing_labels:
+  eks_singleview:
+    run: False
+    overwrite: False
+  eks_multiview:
+    run: False
+    overwrite: False
+  ensemble_mean:
+    run: False
+    overwrite: False
+  ensemble_median:
+    run: False
+    overwrite: False 
 
-#   eks_singleview:
-#     run: False
-#     overwrite: False
-#   eks_multiview:
-#     run: False
-#     use_pca: False
-#     n_components: 3 # components for pca object  
-#     overwrite: False
-#   ensemble_mean:
-#     run: False
-#     overwrite: False
-#   ensemble_median:
-#     run: False
-#     overwrite: False 
-
+# post-processing options - coming from the full videos - this is if we extract from the full videos - for the fly 
 post_processing_labeled_frames:
-  run : True
+  run : False
   overwrite: False
   modes:
-    - eks_singleview
-    - eks_multiview
-    - ensemble_mean
-    - ensemble_median
-
+    # - eks_singleview
+    # - eks_multiview
+    # - ensemble_median
+    # - ensemble_mean
 
 post_processing_videos:
-
-  eks_singleview:
-    run: True
-    overwrite: True
   eks_multiview:
-    run: True
-    overwrite: True
-    n_latent: 3 # components for pca object
-  ensemble_mean:
-    run: True
-    overwrite: True
+    run: False
+    overwrite: False
+    n_latent: 3 # components for pca object - 6 for chickadee and 3 for fly and mouse 
+  eks_singleview:
+    run: False
+    overwrite: False
   ensemble_median:
-    run: True
-    overwrite: True
-
+    run: False
+    overwrite: False
+  ensemble_mean:
+    run: False
+    overwrite: False
 
 
 # visualization options
