--- a/configs/pipeline_inference.yaml
+++ b/configs/pipeline_inference.yaml
@@ -14,7 +14,7 @@ pipeline_seeds: 0
 
 outputs_dir: /teamspace/studios/this_studio/outputs/${dataset_name}
 
-intermediate_results_dir: test_100_MVT_mirror-mouse-separate_after_merge_debug
+intermediate_results_dir: test_100_MVT_patch_Context_debug_111
 
 # initial training of an ensemble of networks
 train_networks:
@@ -29,7 +29,7 @@ train_networks:
   ensemble_seeds:
     - 0
     - 1
-    # - 2
+    - 2
     # - 3
     # - 4
     # - 5
@@ -45,9 +45,10 @@ train_networks:
     # - semisupervised
     # - multiview_cnn
     # - multiview_transformer_learnable_crossview
-    - multiview_transformer
+    # - multiview_transformer
     # - mvt_3d_loss
     # - mvt_semisupervised
+    - multiview_transformer_mhcrnn
     
     # think about adding multiview here 
   # run inference on videos in these directories (independent of training videos)
@@ -63,8 +64,8 @@ train_networks:
     # - videos_paper
 
   # training parameters
-  min_steps: 500 # need 5000 I use 500 for testing 
-  max_steps: 500 # need 5000
+  min_steps: 5000 # need 5000 I use 500 for testing 
+  max_steps: 5000 # need 5000
   unfreezing_step: 400 #400 # started with 260 for supervised - should be 400 for transformer 
   milestone_steps: [2000, 3000, 4000] # in general we have [2000, 3000, 4000]
   val_check_interval: 10 # was 5 
