--- a/configs/config_mirror-mouse-separate.yaml
+++ b/configs/config_mirror-mouse-separate.yaml
@@ -35,8 +35,8 @@ data:
   # columns that correspond to keypoints only labeled in a single view are omitted
   # TODO: what if a keypoint is labeled in more than 1 but not all views?
   # this info is only used for the multiview pca loss
-  # mirrored_column_matches: [0, 1, 2, 3, 4, 5, 6]
-  mirrored_column_matches: [[0, 1, 2, 3, 4, 5, 6], [0, 1, 2, 3, 4, 5, 6]]  # [top_view_keypoints, bot_view_keypoints]
+  mirrored_column_matches: [0, 1, 2, 3, 4, 5, 6]
+  # mirrored_column_matches: [[0, 1, 2, 3, 4, 5, 6], [0, 1, 2, 3, 4, 5, 6]]  # [top_view_keypoints, bot_view_keypoints]
   columns_for_singleview_pca: [0, 1, 2, 3, 4, 5, 6]
 
   skeleton:
@@ -98,8 +98,8 @@ training:
   patch_mask:
     init_step: 700
     final_step: 5000
-    init_ratio: 0.0
-    final_ratio: 0.0 # to disable patch masking set to 0.0
+    init_ratio: 0.1
+    final_ratio: 0.5 # to disable patch masking set to 0.0 - in general keep 0.5
 
 model:
   # list of unsupervised losses
@@ -112,10 +112,10 @@ model:
   # resnet50_human_jhmdb | resnet50_human_res_rle | resnet50_human_top_res
   # efficientnet_b0 | efficientnet_b1 | efficientnet_b2
   backbone: vits_dino #resnet50_animal_ap10k #resnet50_animal_ap10k
-  # prediction mode - "heatmap" | "regression" | "heatmap_mhcrnn" | "heatmap_multiview" 
-  model_type: heatmap_multiview_transformer  #heatmap_multiview_transformer
+  # prediction mode - "heatmap" | "regression" | "heatmap_mhcrnn" | "heatmap_multiview" | "heatmap_multiview_transformer"
+  model_type: heatmap_multiview_transformer_mhcrnn  #heatmap_multiview_transformer
   # head mode - "heatmap_cnn" | "feature_transformer" | "feature_transformer_learnable" | "feature_transformer_learnable_crossview"
-  head: heatmap_cnn
+  head: heatmap_mhcrnn
   # which heatmap loss to use
   # "mse" | "kl" | "js"
   heatmap_loss_type: mse
@@ -209,4 +209,4 @@ callbacks:
     init_val: 0.0
     increase_factor: 0.01 # was 0.01
     final_val: 1.0
-    freeze_until_epoch: 0 # was 0 
+    freeze_until_epoch: 0 # we tried 50
